apps/immich/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-postgres
  labels:
    app: immich
spec:
  type: ClusterIP
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: immich
    component: server
