apps/immich/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich
  labels:
    app: immich
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik-traefik
  tls:
    - hosts:
        - immich.home.bstjohn.net
        - immich.ext.bstjohn.net
      secretName: wildcard-home-tls
  rules:
    - host: immich.home.bstjohn.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: truenas-gate
                port:
                  number: 80
    - host: immich.ext.bstjohn.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: truenas-gate
                port:
                  number: 80
